Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34900

"Sending data" stage is set too early

    XMLWordPrintable

Details

    Description

      SHOW PROFILE shows that most time is spent for 'sending data' which is confusing as the time is actually shown for executing the query.

      Suggestion to fix this:

      stage_executing in JOIN::exec_inner should be replace with a new stage "Prepare for executing"

      stage_sending_data in JOIN::exec_inner should be replaced with stage_executing

      Attachments

        Activity

          People

            Unassigned Unassigned
            monty Michael Widenius
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.