MDEV-34900: stage names for profiling "Sending data" breakup

SHOW PROFILE shows that most time is spent for 'sending data'
which is confusing as the time is actually shown for executing
the query.

JOIN::exec_inner has;
* "Executing" replaced with "Prepare for execution"
* "Sending data" replaced with "Executing"